fixed mobile view overflow

--- a/css/index.css
+++ b/css/index.css
@@ -284,7 +284,7 @@ footer {
 
   .hero-img {
     width: 100vw;
-    height: 320px;
+    height: 280px;
     position: relative;
     background: url(../images/hero-mobile.jpg) no-repeat top center;
     background-position-y: 0px;
